eks-manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: security-graph
  labels:
    name: security-graph
    environment: production
