eks-manifests/08-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-service-network-policy
  namespace: security-graph
spec:
  podSelector:
    matchLabels:
      app: api-service
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: api-service
      ports:
        - protocol: TCP
          port: 8080
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 443
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 8182
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rule-runner-network-policy
  namespace: security-graph
spec:
  podSelector:
    matchLabels:
      app: rule-runner
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 443
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 8182
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 443
